# r82ae_zephyr_app_porting

./: README.md  avh.py  build.sh  launch-dev-container.sh  license.rst  template.env
actuation_module/: CMakeLists.txt  Kconfig  cyclonedds_config.cmake  prj_actuation.conf  west.yml
actuation_module/boards/: fvp_baser_aemv8r_smp.overlay  fvp_baser_aemv8r_smp_actuation.conf  s32z270dc2_rtu0_r52.overlay  s32z270dc2_rtu0_r52@D.overlay  s32z270dc2_rtu0_r52_actuation.conf
actuation_module/include/common/clock/: clock.hpp
actuation_module/include/common/dds/: config.hpp  dds.hpp  helper.hpp  network_config.hpp  publisher.hpp  subscriber.hpp
actuation_module/include/common/logger/: logger.hpp
actuation_module/include/common/node/: node.hpp  timer.hpp
actuation_module/src/: main.cpp
actuation_module/src/autoware/autoware_interpolation/: autoware_interpolation.cmake
actuation_module/src/autoware/autoware_interpolation/include/autoware/interpolation/: interpolation_utils.hpp  linear_interpolation.hpp  spherical_linear_interpolation.hpp  spline_interpolation.hpp  spline_interpolation_points_2d.hpp
actuation_module/src/autoware/autoware_interpolation/src/: linear_interpolation.cpp  spherical_linear_interpolation.cpp  spline_interpolation.cpp  spline_interpolation_points_2d.cpp
actuation_module/src/autoware/autoware_motion_utils/: autoware_motion_utils.cmake
actuation_module/src/autoware/autoware_motion_utils/src/trajectory/: trajectory.cpp
actuation_module/src/autoware/autoware_mpc_lateral_controller/: autoware_mpc_lateral_controller.cmake
actuation_module/src/autoware/autoware_mpc_lateral_controller/include/autoware/mpc_lateral_controller/: lowpass_filter.hpp  mpc.hpp  mpc_lateral_controller.hpp  mpc_trajectory.hpp  mpc_utils.hpp  steering_predictor.hpp
actuation_module/src/autoware/autoware_mpc_lateral_controller/src/: lowpass_filter.cpp  mpc.cpp  mpc_lateral_controller.cpp  mpc_trajectory.cpp  mpc_utils.cpp  steering_predictor.cpp
actuation_module/src/autoware/autoware_mpc_lateral_controller/src/qp_solver/: qp_solver_osqp.cpp
actuation_module/src/autoware/autoware_mpc_lateral_controller/src/steering_offset/: steering_offset.cpp
actuation_module/src/autoware/autoware_mpc_lateral_controller/src/vehicle_model/: vehicle_model_bicycle_dynamics.cpp
actuation_module/src/autoware/autoware_msgs/: CMakeLists.txt
actuation_module/src/autoware/autoware_msgs/include/autoware/autoware_msgs/: messages.hpp
actuation_module/src/autoware/autoware_msgs/msg/: Accel.idl  AccelStamped.idl  AccelWithCovariance.idl  AccelWithCovarianceStamped.idl  Control.idl  ControlHorizon.idl  Duration.idl  Float32.idl  Float32MultiArrayStamped.idl  Float32Stamped.idl  Float64.idl  Float64MultiArrayStamped.idl  Float64Stamped.idl  Header.idl  Lateral.idl  Longitudinal.idl  MultiArrayDimension.idl  MultiArrayLayout.idl  Odometry.idl  OperationModeState.idl  Path.idl  PathPoint.idl  PathPointWithLaneId.idl  PathWithLaneId.idl  Point.idl  Pose.idl  PoseArray.idl  PoseStamped.idl  PoseWithCovariance.idl  PoseWithCovarianceStamped.idl  PredictedPath.idl  ProcessingTimeNode.idl  ProcessingTimeTree.idl  Quaternion.idl  QuaternionStamped.idl  SteeringReport.idl  Time.idl  Trajectory.idl  TrajectoryPoint.idl  Transform.idl  (+9 more)
actuation_module/src/autoware/autoware_osqp_interface/: autoware_osqp_interface.cmake
actuation_module/src/autoware/autoware_osqp_interface/include/autoware/osqp_interface/: csc_matrix_conv.hpp  osqp_interface.hpp  visibility_control.hpp
actuation_module/src/autoware/autoware_osqp_interface/src/: csc_matrix_conv.cpp  osqp_interface.cpp
actuation_module/src/autoware/autoware_pid_longitudinal_controller/: autoware_pid_longitudinal_controller.cmake
actuation_module/src/autoware/autoware_pid_longitudinal_controller/include/autoware/pid_longitudinal_controller/: longitudinal_controller_utils.hpp  pid_longitudinal_controller.hpp  smooth_stop.hpp
actuation_module/src/autoware/autoware_pid_longitudinal_controller/src/: longitudinal_controller_utils.cpp  pid.cpp  pid_longitudinal_controller.cpp  smooth_stop.cpp
actuation_module/src/autoware/autoware_trajectory_follower_base/: autoware_trajectory_follower_base.cmake
actuation_module/src/autoware/autoware_trajectory_follower_base/include/autoware/trajectory_follower_base/: control_horizon.hpp  input_data.hpp  lateral_controller_base.hpp  longitudinal_controller_base.hpp  visibility_control.hpp
actuation_module/src/autoware/autoware_trajectory_follower_node/: autoware_trajectory_follower_node.cmake
actuation_module/src/autoware/autoware_trajectory_follower_node/src/: controller_node.cpp
actuation_module/src/autoware/autoware_universe_utils/: autoware_universe_utils.cmake
actuation_module/src/autoware/autoware_universe_utils/src/geometry/: alt_geometry.cpp  geometry.cpp  pose_deviation.cpp
actuation_module/src/autoware/autoware_vehicle_info_utils/: autoware_vehicle_info_utils.cmake
actuation_module/src/autoware/autoware_vehicle_info_utils/include/autoware_vehicle_info_utils/: vehicle_info.hpp  vehicle_info_utils.hpp
actuation_module/src/autoware/autoware_vehicle_info_utils/src/: vehicle_info.cpp  vehicle_info_utils.cpp
actuation_module/test/: dds_pub.cpp  dds_sub.cpp  unit_test.cpp
actuation_module/test/rosbag_test/: play_rosbag.sh
actuation_module/test/rosbag_test/rosbag/: arm-automotive-kit_cmd.yaml  metadata.yaml
actuation_module/test/rosbag_test/test_control_cmd_outputs/: arm_s32z_control_cmd.yaml  autoware_original_control_cmd.yaml  fvp_control_cmd.yaml
demo/: commands  common.env  cyclonedds.xml  (+1 more)
(+26 files in other folders)
